--- a/_units/07.md
+++ b/_units/07.md
@@ -225,6 +225,44 @@ Coupled pendulum oscillators (image source: http://xeon.concord.org:8080/modeler
 
 Applied to rhythm, the coupled oscillator model states that rhythm is the result of a set of internal oscillators which entrain towards the expected rhythm. Large and Kolen (1994) and McAuley (1996) have modeled the perception and production of rhythm using coupled oscillators, where the placement of each beat within a metric structure is set by the phase of the oscillator, and individual oscillators entrain towards the recurrent beat. The use of coupled oscillators has led to some successful beat-finding algorithms. Coupled oscillator theories are computationally attractive as they can predict many observations, including the perception of meter as a recurrent rhythmic pattern, using relatively elegant mathematical models. Unfortunately, we are not yet sure of physiological bases of coupled oscillator models.
 
+# A Mathematical Model of Meter: Clarence Barlow's Indispensability Function
+
+A meter is composed of one to several strata. For example, the 6-eighth time signature is composed of two strata with 2 meter at the highest level and a 3 meter at the next lower level.
+Each stratum is identified by a prime divisor. These are "basic" meters, usually with 2 and 3 pulses; but all other additive meters, such as 5 or 7, can also be defined as basic meters.
+The indispensability values of a 2 meter are 1 0, those of a 3 meter are 2 0 1, and those of a 5 (2+3) meter are 4 0 3 1 2.
+
+The indispensability values of the pulses in a compound meter are obtained by adding the indispensability values of the basic meter of each strata, rotating the first value backwards in each case. 
+
+For a 2x3x5 meter, we initially get:
+
+000000000000000111111111111111 
+000001111122222000001111122222 
+031240312403124031240312403124
+
+Now we multiply each stratum by the product of the pulse counts of the preceding strata (1 for the first stratum) and add the values together:
+
+Pulse 2 3 4 5 6 7 8 9101112131415161718192021222324252627282930 1 
+  *1: 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 
+  *2: 0 0 0 0 0 2 2 2 2 2 4 4 4 4 4 0 0 0 0 0 2 2 2 2 2 4 4 4 4 4 
+  *2*3: 0186122401861224 0 18 6 1224 0 18 6 1224 0 18 6 1224 0 18 6 1224
+Sum0186122422081426 4 22101628 1 19 7 1325 3 21 9 1527 5 25111729
+
+Exactly this addition process is described by the following formula of Klarenz Barlow (the rotation is given by the addition of the 1 within the round brackets as well as the square brackets):
+
+{% include img-figure url="/MUTOR/assets/images/unit7_indispensibility.png" description="Barlow's indispensibility formula" %}
+
+whereby 
+Ψ = indispensability of a pulse 
+z = number of levels in the stratification 
+q = prime divisor; with q0 = qz + 1 = 1.
+
+The indispensability of the 24th pulse (n=24; z=3) can thus be calculated:
+For r=0: (2 * 3) * Ψ5(1+ [1+ (22 mod 30 / 1)] mod 5) = 6 * Ψ5(1+ 23 mod 5) = 6 * Ψ5(1+3) = 6 * 1 = 6 
+For r=1: 2 * Ψ3(1+ [1+ (22 mod 30 / 5)] mod 3) = 2 * Ψ3(1+ 5.4 mod 3) = 2 * Ψ3(1+2) = 2 * 1 = 2
+For r=2: 1 * Ψ2(1+ [1+ (22 mod 30 / 15)] mod 2) = 1 * Ψ2(1+ 2.47 mod 2) = 1 * Ψ2(1+0) = 1 * 1 = 1 
+
+The sum of the three members is therefore 9; this value can also be seen from the upper table.
+
 # Summary
 We have provided an overview of the physic and biology of rhythm perception and production. Our perception of rhythm depends on sounds; in particular on perceptual accents or event onsets within the streams of sounds to which we are exposed in the environment. Rhythm seems to function optimally at the range of the TactuS, and can be subdivided into the smallest unit known as the TatuM. MicrotimingAndExpressiveTiming can be described using TimeMaps, which include the RhythmoGram and graphs relating score time to performance time. Models of rhythm and meter can be divided into two broad classes known as the IntervalTiming models and the CoupledOscillator models. In some cases, rhythm production can also be modeled as covariance. The Bayesian method provides a method to relate rhythm perception with production.
 
