--- a/_units/07.md
+++ b/_units/07.md
@@ -232,73 +232,73 @@ The composer and music theorist Barlow developed in the 1970's a quantiative mod
 A meter consists of one to several _strata_. For example,  6/8 meter is composed of two strata, one with 2 pulses (dotted quarter notes) at the highest level and another with 3 pulses (eighth notes) at the next lower level.
 Each stratum is identified by a _prime divisor_. These are "basic" meters, usually with 2 and 3 pulses; but additive meters such as 5 (2+3) or 7 (2+2+3), can also be defined as basic meters. The indispensability values of a 2 meter are 1 0, those of a 3 meter are 2 0 1, and those of a 5 (2+3) meter are 4 0 3 1 2.
 
-The following meters have the same number of pulses, but a different stratification yielding the following profiles:
-3/4 (3x2x2):   11 0 6 3 9 1 7 4 10 2 8 5
-6/8 (2x3x2):   11 0 6 2 8 4 10 1 7 3 9 5 
-12/16 (2x2x3): 11 0 4 8 2 6 10 1 5 9 3 7
-
+The following meters have the same number of pulses, but a different stratification yielding the following profiles:<br>
+3/4 (3x2x2):   11 0 6 3 9 1 7 4 10 2 8 5<br>
+6/8 (2x3x2):   11 0 6 2 8 4 10 1 7 3 9 5 <br>
+12/16 (2x2x3): 11 0 4 8 2 6 10 1 5 9 3 7<br>
+<br>
 {% include img-figure url="/MUTOR/assets/images/unit7_indispensibility2.png" description="Metric profiles for different meters with 12 pulses each" %}
 
-The values for the first and second levels are also contained herein: to make these evident, subtract the difference between the quantity of pulses at the level shown above and those at the desired level from the indispensability, keeping only non-negative numbers, e.g. for 3/4 (the number of pulses on the 3rd level as shown above is 12):
-1st level (pulse quantity 3:subtract 12-3,i.e.9): 2 - - - 0 - - - 1 - - - 
-2nd level (pulse quantity 6:subtract 12-6,i.e.6): 5 - 0 - 3 - 1 - 4 - 2 -
+The values for the first and second levels are also contained herein: to make these evident, subtract the difference between the quantity of pulses at the level shown above and those at the desired level from the indispensability, keeping only non-negative numbers, e.g. for 3/4 (the number of pulses on the 3rd level as shown above is 12):<br>
+1st level (pulse quantity 3:subtract 12-3,i.e.9): 2 - - - 0 - - - 1 - - - <br>
+2nd level (pulse quantity 6:subtract 12-6,i.e.6): 5 - 0 - 3 - 1 - 4 - 2 -<br>
 
 Notice that at all levels, the indispensability of the first pulse is always one less than the number of pulses, and that that of the second pulse is always zero.
 
 The metric profile of a compound meter is obtained by adding the indispensability values of the basic meter of each strata, rotating the first value backwards in each case. In the following examples the dashes are replaced by the repeating the preceding number.
 
-12/16 meter:
-Pulse #     2  3  4  5  6  7  8  9  10 11 12 1     
-1st stratum 0  0  0  0  0  0  1  1  1  1  1  1
-2nd stratum 0  0  0  1  1  1  0  0  0  1  1  1
-3rd stratum 0  1  2  0  1  2  0  1  2  0  1  2
+12/16 meter:<br>
+Pulse #     2  3  4  5  6  7  8  9  10 11 12 1 <br>   
+1st stratum 0  0  0  0  0  0  1  1  1  1  1  1<br>
+2nd stratum 0  0  0  1  1  1  0  0  0  1  1  1<br>
+3rd stratum 0  1  2  0  1  2  0  1  2  0  1  2<br>
 
-Pulse #  2  3  4  5  6  7  8  9  10 11 12 1 
-\*1:     0  0  0  0  0  0  1  1  1  1  1  1
-\*2:     0  0  0  2  2  2  0  0  0  2  2  2
-\*2\*2:  0  4  8  0  4  8  0  4  8  0  4  8
-Sum      0  4  8  2  6  10 1  5  9  3  7  11
+Pulse #  2  3  4  5  6  7  8  9  10 11 12 1 <br>
+\*1:     0  0  0  0  0  0  1  1  1  1  1  1<br>
+\*2:     0  0  0  2  2  2  0  0  0  2  2  2<br>
+\*2\*2:  0  4  8  0  4  8  0  4  8  0  4  8<br>
+Sum      0  4  8  2  6  10 1  5  9  3  7  11<br>
+<br>
+Rotating the first pulse back to the beginning yields:<br>
+        11  0  4  8  2  6  10 1  5  9  3  7<br>
 
-Rotating the first pulse back to the beginning yields:
-        11  0  4  8  2  6  10 1  5  9  3  7
-
-Similarly, for a 2x3x5 meter (e.g. a 6/4 meter with every quarter note further divided by 5 sixteenth note quintuplet), we initially get:
-Pulse #     2  3  4  5  6  7  8  9  10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 1 
-1st stratum 0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1 
-2nd stratum 0  0  0  0  0  1  1  1  1  1  2  2  2  2  2  0  0  0  0  0  1  1  1  1  1  2  2  2  2  2 
-3rd stratum 0  3  1  2  4  0  3  1  2  4  0  3  1  2  4  0  3  1  2  4  0  3  1  2  4  0  3  1  2  4
-
-Now we multiply each stratum by the product of the pulse counts of the preceding strata (1 for the first stratum) and add the values together:
-
-Pulse #  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30  1 
-\*1:     0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1
-\*2:     0  0  0  0  0  2  2  2  2  2  4  4  4  4  4  0  0  0  0  0  2  2  2  2  2  4  4  4  4  4 
-\*2\*3:  0 18  6 12 24  0 18  6 12 24  0 18  6 12 24  0 18  6 12 24  0 18  6 12 24  0 18  6 12 24
-Sum      0 18  6 12 24  2 20  8 14 26  4 22 10 16 28  1 19  7 13 25  3 21  9 15 27  5 25 11 17 29
-
-Rotating the final number back to the beginning yields:
-        29  0 18 6  12 24  2 20  8 14 26  4 22 10 16 28  1 19  7 13 25  3 21  9 15 27  5 25 11 17 
-
+Similarly, for a 2x3x5 meter (e.g. a 6/4 meter with every quarter note further divided by 5 sixteenth note quintuplet), we initially get:<br>
+Pulse #     2  3  4  5  6  7  8  9  10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 1 <br>
+1st stratum 0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1 <br>
+2nd stratum 0  0  0  0  0  1  1  1  1  1  2  2  2  2  2  0  0  0  0  0  1  1  1  1  1  2  2  2  2  2 <br>
+3rd stratum 0  3  1  2  4  0  3  1  2  4  0  3  1  2  4  0  3  1  2  4  0  3  1  2  4  0  3  1  2  4<br>
+<br>
+Now we multiply each stratum by the product of the pulse counts of the preceding strata (1 for the first stratum) and add the values together:<br>
+<br>
+Pulse #  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30  1 <br>
+\*1:     0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1<br>
+\*2:     0  0  0  0  0  2  2  2  2  2  4  4  4  4  4  0  0  0  0  0  2  2  2  2  2  4  4  4  4  4 <br>
+\*2\*3:  0 18  6 12 24  0 18  6 12 24  0 18  6 12 24  0 18  6 12 24  0 18  6 12 24  0 18  6 12 24<br>
+Sum      0 18  6 12 24  2 20  8 14 26  4 22 10 16 28  1 19  7 13 25  3 21  9 15 27  5 25 11 17 29<br>
+<br>
+Rotating the final number back to the beginning yields:<br>
+        29  0 18 6  12 24  2 20  8 14 26  4 22 10 16 28  1 19  7 13 25  3 21  9 15 27  5 25 11 17 <br>
+<br>
 This  process is formalized by the following formula of Clarence Barlow (the rotation is given by the addition of the 1 within the round brackets as well as the square brackets):
 
-Formula of the indispensability Ψ of the nth pulse of a meter of stratification p1 x p2 x p3 x...x pz
+Formula of the indispensability Ψ of the nth pulse of a meter of stratification p1 x p2 x p3 x...x pz<br>
 
 {% include img-figure url="/MUTOR/assets/images/unit7_indispensibility.png" description="Barlow's indispensibility formula" %}
+<br>
+whereby <br>
+p0 = pz+1 = 1<br>
+n = position in the bar of the pulse in question, starting at 1<br>
+pj = stratification divisor on level j<br>
+z = number of levels in the stratification <br>
+Ψp(x) = indispensability of the xth pulse of a first-order bar with the prime stratification p<br>
+\[x\] = whole-number component of x<br>
 
-whereby 
-p0 = pz+1 = 1
-n = position in the bar of the pulse in question, starting at 1
-pj = stratification divisor on level j
-z = number of levels in the stratification 
-Ψp(x) = indispensability of the xth pulse of a first-order bar with the prime stratification p
-\[x\] = whole-number component of x
-
-The indispensability of the 24th pulse (n=24; z=3) can thus be calculated:
-For r=0: (2 * 3) * Ψ5(1+ [1+ (22 mod 30 / 1)] mod 5) = 6 * Ψ5(1+ 23 mod 5) = 6 * Ψ5(1+3) = 6 * 1 = 6 
-For r=1: 2 * Ψ3(1+ [1+ (22 mod 30 / 5)] mod 3) = 2 * Ψ3(1+ 5.4 mod 3) = 2 * Ψ3(1+2) = 2 * 1 = 2
-For r=2: 1 * Ψ2(1+ [1+ (22 mod 30 / 15)] mod 2) = 1 * Ψ2(1+ 2.47 mod 2) = 1 * Ψ2(1+0) = 1 * 1 = 1 
-
-The sum of the three members is therefore 9 (see above).
+The indispensability of the 24th pulse (n=24; z=3) can thus be calculated:<br>
+For r=0: (2 * 3) * Ψ5(1+ [1+ (22 mod 30 / 1)] mod 5) = 6 * Ψ5(1+ 23 mod 5) = 6 * Ψ5(1+3) = 6 * 1 = 6 <br>
+For r=1: 2 * Ψ3(1+ [1+ (22 mod 30 / 5)] mod 3) = 2 * Ψ3(1+ 5.4 mod 3) = 2 * Ψ3(1+2) = 2 * 1 = 2<br>
+For r=2: 1 * Ψ2(1+ [1+ (22 mod 30 / 15)] mod 2) = 1 * Ψ2(1+ 2.47 mod 2) = 1 * Ψ2(1+0) = 1 * 1 = 1 <br>
+<br>
+The sum of the three members is therefore 9 (see above).<br>
 
 Barlow has used these metric profiles in composition based on a generative probabilitic approach (i.e. weighted chance). 
 
