--- a/_units/07.md
+++ b/_units/07.md
@@ -232,10 +232,10 @@ The composer and music theorist Barlow developed in the 1970's a quantiative mod
 A meter consists of one to several _strata_. For example,  6/8 meter is composed of two strata, one with 2 pulses (dotted quarter notes) at the highest level and another with 3 pulses (eighth notes) at the next lower level.
 Each stratum is identified by a _prime divisor_. These are "basic" meters, usually with 2 and 3 pulses; but additive meters such as 5 (2+3) or 7 (2+2+3), can also be defined as basic meters. The indispensability values of a 2 meter are 1 0, those of a 3 meter are 2 0 1, and those of a 5 (2+3) meter are 4 0 3 1 2.
 
-The following meters have the same number of pulses, but a different stratification yielding the following profiles:<p>
-`3/4 (3x2x2):   11 0 6 3 9 1 7 4 10 2 8 5`<p>
-`6/8 (2x3x2):   11 0 6 2 8 4 10 1 7 3 9 5` <p>
-`12/16 (2x2x3): 11 0 4 8 2 6 10 1 5 9 3 7`<p>
+The following meters have the same number of pulses, but a different stratification yielding the following profiles:<br/
+`3/4 (3x2x2):   11 0 6 3 9 1 7 4 10 2 8 5`<br/
+`6/8 (2x3x2):   11 0 6 2 8 4 10 1 7 3 9 5` <br/
+`12/16 (2x2x3): 11 0 4 8 2 6 10 1 5 9 3 7`<br/
 <br>
 {% include img-figure url="/MUTOR/assets/images/unit7_indispensibility2.png" description="Metric profiles for different meters with 12 pulses each" %}
 
