--- a/_units/07.md
+++ b/_units/07.md
@@ -240,8 +240,8 @@ The following meters have the same number of pulses, but a different stratificat
 {% include img-figure url="/MUTOR/assets/images/unit7_indispensibility2.png" description="Metric profiles for different meters with 12 pulses each" %}
 
 The values for the first and second levels are also contained herein: to make these evident, subtract the difference between the quantity of pulses at the level shown above and those at the desired level from the indispensability, keeping only non-negative numbers, e.g. for 3/4 (the number of pulses on the 3rd level as shown above is 12):<br>
-1st level (pulse quantity 3:subtract 12-3,i.e.9): 2 - - - 0 - - - 1 - - - <p>
-2nd level (pulse quantity 6:subtract 12-6,i.e.6): 5 - 0 - 3 - 1 - 4 - 2 -<p>
+1st level (pulse quantity 3:subtract 12-3,i.e.9): 2 - - - 0 - - - 1 - - - <br>
+2nd level (pulse quantity 6:subtract 12-6,i.e.6): 5 - 0 - 3 - 1 - 4 - 2 - <br>
 
 Notice that at all levels, the indispensability of the first pulse is always one less than the number of pulses, and that that of the second pulse is always zero.
 
