--- a/_units/07.md
+++ b/_units/07.md
@@ -233,15 +233,15 @@ A meter consists of one to several _strata_. For example,  6/8 meter is composed
 Each stratum is identified by a _prime divisor_. These are "basic" meters, usually with 2 and 3 pulses; but additive meters such as 5 (2+3) or 7 (2+2+3), can also be defined as basic meters. The indispensability values of a 2 meter are 1 0, those of a 3 meter are 2 0 1, and those of a 5 (2+3) meter are 4 0 3 1 2.
 
 The following meters have the same number of pulses, but a different stratification yielding the following profiles:<br/
-`3/4 (3x2x2):   11 0 6 3 9 1 7 4 10 2 8 5`<br/
-`6/8 (2x3x2):   11 0 6 2 8 4 10 1 7 3 9 5` <br/
-`12/16 (2x2x3): 11 0 4 8 2 6 10 1 5 9 3 7`<br/
-<br>
+`3/4 (3x2x2):   11 0 6 3 9 1 7 4 10 2 8 5`<br/>
+`6/8 (2x3x2):   11 0 6 2 8 4 10 1 7 3 9 5` <br/>
+`12/16 (2x2x3): 11 0 4 8 2 6 10 1 5 9 3 7`<br/>
+<br/>
 {% include img-figure url="/MUTOR/assets/images/unit7_indispensibility2.png" description="Metric profiles for different meters with 12 pulses each" %}
 
 The values for the first and second levels are also contained herein: to make these evident, subtract the difference between the quantity of pulses at the level shown above and those at the desired level from the indispensability, keeping only non-negative numbers, e.g. for 3/4 (the number of pulses on the 3rd level as shown above is 12):<br>
-1st level (pulse quantity 3:subtract 12-3,i.e.9): 2 - - - 0 - - - 1 - - - <br>
-2nd level (pulse quantity 6:subtract 12-6,i.e.6): 5 - 0 - 3 - 1 - 4 - 2 - <br>
+1st level (pulse quantity 3:subtract 12-3,i.e.9): 2 - - - 0 - - - 1 - - - <br/>
+2nd level (pulse quantity 6:subtract 12-6,i.e.6): 5 - 0 - 3 - 1 - 4 - 2 - <br/>
 
 Notice that at all levels, the indispensability of the first pulse is always one less than the number of pulses, and that that of the second pulse is always zero.
 
