--- a/_units/07.md
+++ b/_units/07.md
@@ -227,9 +227,10 @@ Applied to rhythm, the coupled oscillator model states that rhythm is the result
 
 # A Mathematical Model of Meter: Clarence Barlow's Indispensability Function
 
-The composer and music theorist Barlow developed in the 1970's a quantiative model which is capable of yielding a _metric profile_ for any meter. Applying his method, each pulse has a unique value corresponding to the relative weight it holds within the meter. 
+In Western music, the inherent quality of a meter can be, within limits, encoded by the time signature and the beams employed in its notation. While measures in 3/4, 6/8 and 12/16 meters contain the same number of 16th notes, musicians have learned accentuate the pulses in order to give the meter a clear contour. A meter can be considered a kind of _relief_ upon which the gestalt of a rhythm is based. While a meter conditions a rhythm, it can also go against the grain of the former by forming _syncopations_. A rhythm in conjunction with a series of pitches forms the gestalt of a melody.
+The composer and music theorist Barlow developed in the 1970's a quantiative model which is capable of yielding a _metric profile_ for any meter which assigns a unique weight value (indispensability) to each of its pulses. The term indispensability stems from _thinning_ experiments in which Barlow asked subjects to determine which pulses are necessary to maintain a sense of a meter when successively turning its pulses into rests and therefore are less dispensible. A metric profile thus represents a kind of "natural order" akin to a harmonic series, but with notes derived from the harmonic series, composers and improvising musicians are free decide when and how to violate this order which contributes to the notions of tension and relief.
 
-A meter consists of one to several _strata_. For example,  6/8 meter is composed of two strata, one with 2 pulses (dotted quarter notes) at the highest level and another with 3 pulses (eighth notes) at the next lower level.
+A meter consists of one to several _strata_ highlighting its hierarchical nature. For example,  6/8 meter is composed of two strata, one with 2 pulses (dotted quarter notes) at the highest level and another with 3 pulses (eighth notes) at the next lower level.
 Each stratum is identified by a _prime divisor_. These are "basic" meters, usually with 2 and 3 pulses; but additive meters such as 5 (2+3) or 7 (2+2+3), can also be defined as basic meters. The indispensability values of a 2 meter are 1 0, those of a 3 meter are 2 0 1, and those of a 5 (2+3) meter are 4 0 3 1 2.
 
 The following meters have the same number of pulses, but a different stratification yielding the following profiles:<br/>
@@ -240,9 +241,9 @@ The following meters have the same number of pulses, but a different stratificat
 {% include img-figure url="/MUTOR/assets/images/unit7_indispensibility2.png" description="Metric profiles for different meters with 12 pulses each" %}
 
 The values for the first and second levels are also contained herein: to make these evident, subtract the difference between the quantity of pulses at the level shown above and those at the desired level from the indispensability, keeping only non-negative numbers, e.g. for 3/4 (the number of pulses on the 3rd level as shown above is 12):<br>
-1st level (pulse quantity 3:subtract 12-3,i.e.9):
+1st level (pulse quantity 3:subtract 12-3,i.e.9):<br/>
 `2 - - - 0 - - - 1 - - -` <br/>
-2nd level (pulse quantity 6:subtract 12-6,i.e.6): 
+2nd level (pulse quantity 6:subtract 12-6,i.e.6):<br/> 
 `5 - 0 - 3 - 1 - 4 - 2 -` <br/>
 
 Notice that at all levels, the indispensability of the first pulse is always one less than the number of pulses, and that that of the second pulse is always zero.
