--- a/_units/07.md
+++ b/_units/07.md
@@ -228,7 +228,7 @@ Applied to rhythm, the coupled oscillator model states that rhythm is the result
 # A Mathematical Model of Meter: Clarence Barlow's Indispensability Function
 
 In Western music, the inherent quality of a meter can be, within limits, encoded by the time signature and the beams employed in its notation. While measures in 3/4, 6/8 and 12/16 meters contain the same number of 16th notes, musicians have learned accentuate the pulses in order to give the meter a clear contour. A meter can be considered a kind of _relief_ upon which the gestalt of a rhythm is based. While a meter conditions a rhythm, it can also go against the grain of the former by forming _syncopations_. A rhythm in conjunction with a series of pitches forms the gestalt of a melody.
-The composer and music theorist Barlow developed in the 1970's a quantiative model which is capable of yielding a _metric profile_ for any meter which assigns a unique weight value (indispensability) to each of its pulses. The term indispensability stems from _thinning_ experiments in which Barlow asked subjects to determine which pulses are necessary to maintain a sense of a meter when successively turning its pulses into rests and therefore are less dispensible. A metric profile thus represents a kind of "natural order" akin to a harmonic series, but with notes derived from the harmonic series, composers and improvising musicians are free decide when and how to violate this order which contributes to the notions of tension and relief.
+The composer and music theorist Barlow developed in the 1970s a quantitative model which is capable of yielding a _metric profile_ for a given meter which assigns a unique weight value (indispensability) to each of its pulses. The term indispensability stems from _thinning_ experiments in which Barlow asked subjects to determine which pulses are necessary to maintain a sense of a meter when successively turning its pulses into rests and therefore are less **dispensible**. A metric profile thus represents a kind of "natural order" akin to a harmonic series, but just with the tones derived from the harmonic series, composers and improvising musicians are free decide when and how to violate this order, thus playing with the sense of tension and relief.
 
 A meter consists of one to several _strata_ highlighting its hierarchical nature. For example,  6/8 meter is composed of two strata, one with 2 pulses (dotted quarter notes) at the highest level and another with 3 pulses (eighth notes) at the next lower level.
 Each stratum is identified by a _prime divisor_. These are "basic" meters, usually with 2 and 3 pulses; but additive meters such as 5 (2+3) or 7 (2+2+3), can also be defined as basic meters. The indispensability values of a 2 meter are 1 0, those of a 3 meter are 2 0 1, and those of a 5 (2+3) meter are 4 0 3 1 2.
@@ -246,7 +246,7 @@ The values for the first and second levels are also contained herein: to make th
 2nd level (pulse quantity 6:subtract 12-6,i.e.6):<br/> 
 `5 - 0 - 3 - 1 - 4 - 2 -` <br/>
 
-Notice that at all levels, the indispensability of the first pulse is always one less than the number of pulses, and that that of the second pulse is always zero.
+Note that at all levels, the indispensability of the first pulse is always one less than the number of pulses, and that that of the second pulse is always zero.
 
 The metric profile of a compound meter is obtained by adding the indispensability values of the basic meter of each strata, rotating the first value backwards in each case. In the following examples the dashes are replaced by the repeating the preceding number.
 
@@ -294,16 +294,16 @@ n = position in the bar of the pulse in question, starting at 1<br/>
 pj = stratification divisor on level j<br/>
 z = number of levels in the stratification <br/>
 Ψp(x) = indispensability of the xth pulse of a first-order bar with the prime stratification p<br/>
-\[x\] = whole-number component of x (floor)
+\[x\] = whole-number component of x (floor)<br/>
 
 The indispensability of the 24th pulse (n=24; z=3) can thus be calculated:<br/>
 For r=0: (2 * 3) * Ψ5(1 + [1 + (22 mod 30 / 1)] mod 5) = 6 * Ψ5(1 + 23 mod 5) = 6 * Ψ5(1 + 3) = 6 * 1 = 6 <br/>
 For r=1: 2 * Ψ3(1 + [1 + (22 mod 30 / 5)] mod 3) = 2 * Ψ3(1 + 5.4 mod 3) = 2 * Ψ3(1 + 2) = 2 * 1 = 2 <br/>
 For r=2: 1 * Ψ2(1 + [1 + (22 mod 30 / 15)] mod 2) = 1 * Ψ2(1 + 2.47 mod 2) = 1 * Ψ2(1 + 0) = 1 * 1 = 1 <br/>
-<p>
-The sum of the three members is therefore 9 (see above).<p>
+<br/>
+The sum of the three members is therefore 9 (see above).<br/>
 
-Barlow has used these metric profiles in composition based on a generative probabilitic approach (i.e. weighted chance). 
+Barlow has often used such profiles in his compositions based on a generative probabilitic approach (i.e. weighted chance), his 30-minutes piano piece Çoǧluotobüsişletmesi among them.
 
 # Summary
 We have provided an overview of the physic and biology of rhythm perception and production. Our perception of rhythm depends on sounds; in particular on perceptual accents or event onsets within the streams of sounds to which we are exposed in the environment. Rhythm seems to function optimally at the range of the TactuS, and can be subdivided into the smallest unit known as the TatuM. MicrotimingAndExpressiveTiming can be described using TimeMaps, which include the RhythmoGram and graphs relating score time to performance time. Models of rhythm and meter can be divided into two broad classes known as the IntervalTiming models and the CoupledOscillator models. In some cases, rhythm production can also be modeled as covariance. The Bayesian method provides a method to relate rhythm perception with production.
