--- a/_units/07.md
+++ b/_units/07.md
@@ -256,11 +256,11 @@ The metric profile of a compound meter is obtained by adding the indispensabilit
 `2nd stratum 0  0  0  1  1  1  0  0  0  1  1  1`<br/>
 `3rd stratum 0  1  2  0  1  2  0  1  2  0  1  2`<br/>
 
-`Pulse #  2  3  4  5  6  7  8  9  10 11 12 1` <br/>
-`\*1:     0  0  0  0  0  0  1  1  1  1  1  1`<br/>
-`\*2:     0  0  0  2  2  2  0  0  0  2  2  2`<br/>
-`\*2\*2:  0  4  8  0  4  8  0  4  8  0  4  8`<br/>
-`Sum      0  4  8  2  6  10 1  5  9  3  7  11`<br/>
+`Pulse # 2  3  4  5  6  7  8  9  10 11 12 1` <br/>
+`*1:     0  0  0  0  0  0  1  1  1  1  1  1`<br/>
+`*2:     0  0  0  2  2  2  0  0  0  2  2  2`<br/>
+`*2*2:   0  4  8  0  4  8  0  4  8  0  4  8`<br/>
+`Sum     0  4  8  2  6  10 1  5  9  3  7  11`<br/>
 <br/>
 Rotating the first pulse back to the beginning yields:<br/>
 `        11  0  4  8  2  6  10 1  5  9  3  7`<br/>
@@ -274,9 +274,9 @@ Similarly, for a 2x3x5 meter (e.g. a 6/4 meter with every quarter note further d
 Now we multiply each stratum by the product of the pulse counts of the preceding strata (1 for the first stratum) and add the values together:<p>
 <p>
 `Pulse #  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30  1` <br/>
-`\*1:     0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1` <br/>
-`\*2:     0  0  0  0  0  2  2  2  2  2  4  4  4  4  4  0  0  0  0  0  2  2  2  2  2  4  4  4  4  4` <br/>
-`\*2\*3:  0 18  6 12 24  0 18  6 12 24  0 18  6 12 24  0 18  6 12 24  0 18  6 12 24  0 18  6 12 24` <br/>
+`*1:      0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1` <br/>
+`*2:      0  0  0  0  0  2  2  2  2  2  4  4  4  4  4  0  0  0  0  0  2  2  2  2  2  4  4  4  4  4` <br/>
+`*2*3:    0 18  6 12 24  0 18  6 12 24  0 18  6 12 24  0 18  6 12 24  0 18  6 12 24  0 18  6 12 24` <br/>
 `Sum      0 18  6 12 24  2 20  8 14 26  4 22 10 16 28  1 19  7 13 25  3 21  9 15 27  5 25 11 17 29` <br/>
 <br/>
 Rotating the final number back to the beginning yields:<br/>
@@ -306,7 +306,7 @@ The sum of the three members is therefore 9 (see above).<br/>
 Barlow has often used such profiles in his compositions based on a generative probabilitic approach (i.e. weighted chance), his 30-minutes piano piece Çoǧluotobüsişletmesi among them.
 
 # Summary
-We have provided an overview of the physic and biology of rhythm perception and production. Our perception of rhythm depends on sounds; in particular on perceptual accents or event onsets within the streams of sounds to which we are exposed in the environment. Rhythm seems to function optimally at the range of the TactuS, and can be subdivided into the smallest unit known as the TatuM. MicrotimingAndExpressiveTiming can be described using TimeMaps, which include the RhythmoGram and graphs relating score time to performance time. Models of rhythm and meter can be divided into two broad classes known as the IntervalTiming models and the CoupledOscillator models. In some cases, rhythm production can also be modeled as covariance. The Bayesian method provides a method to relate rhythm perception with production.
+We have provided an overview of the physic and biology of rhythm perception and production. Our perception of rhythm depends on sounds; in particular on perceptual accents or event onsets within the streams of sounds to which we are exposed in the environment. Rhythm seems to function optimally at the range of the Tactus, and can be subdivided into the smallest unit known as the Tatum. Microtiming and expressive timing can be described using time maps, which include the rhythmogram and graphs relating score time to performance time. Models of rhythm and meter can be divided into two broad classes known as the interval timing models and the coupled oscillator models. In some cases, rhythm production can also be modeled as covariance. The Bayesian method provides a method to relate rhythm perception with production.
 
 # References
 
