--- a/_units/07.md
+++ b/_units/07.md
@@ -270,9 +270,9 @@ Similarly, for a 2x3x5 meter (e.g. a 6/4 meter with every quarter note further d
 `1st stratum 0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1` <br/>
 `2nd stratum 0  0  0  0  0  1  1  1  1  1  2  2  2  2  2  0  0  0  0  0  1  1  1  1  1  2  2  2  2  2` <br/>
 `3rd stratum 0  3  1  2  4  0  3  1  2  4  0  3  1  2  4  0  3  1  2  4  0  3  1  2  4  0  3  1  2  4` <br/>
-<p>
-Now we multiply each stratum by the product of the pulse counts of the preceding strata (1 for the first stratum) and add the values together:<p>
-<p>
+<br/>
+Now we multiply each stratum by the product of the pulse counts of the preceding strata (1 for the first stratum) and add the values together:<br/>
+<br/>
 `Pulse #  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30  1` <br/>
 `*1:      0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1` <br/>
 `*2:      0  0  0  0  0  2  2  2  2  2  4  4  4  4  4  0  0  0  0  0  2  2  2  2  2  4  4  4  4  4` <br/>
