--- a/_units/07.md
+++ b/_units/07.md
@@ -230,14 +230,14 @@ Applied to rhythm, the coupled oscillator model states that rhythm is the result
 In Western music, the inherent quality of a meter can be, within limits, encoded by the time signature and the beams employed in its notation. While measures in 3/4, 6/8 and 12/16 meters contain the same number of 16th notes, musicians have learned accentuate the pulses in order to give the meter a clear contour. A meter can be considered a kind of _relief_ upon which the gestalt of a rhythm is based. While a meter conditions a rhythm, it can also go against the grain of the former by forming _syncopations_. A rhythm in conjunction with a series of pitches forms the gestalt of a melody.
 The composer and music theorist Barlow developed in the 1970s a quantitative model which is capable of yielding a _metric profile_ for a given meter which assigns a unique weight value (indispensability) to each of its pulses. The term indispensability stems from _thinning_ experiments in which Barlow asked subjects to determine which pulses are necessary to maintain a sense of a meter when successively turning its pulses into rests and therefore are less **dispensible**. A metric profile thus represents a kind of "natural order" akin to a harmonic series, but just with the tones derived from the harmonic series, composers and improvising musicians are free decide when and how to violate this order, thus playing with the sense of tension and relief.
 
-A meter consists of one to several _strata_ highlighting its hierarchical nature. For example,  6/8 meter is composed of two strata, one with 2 pulses (dotted quarter notes) at the highest level and another with 3 pulses (eighth notes) at the next lower level.
+A meter consists of one to several _strata_ highlighting its hierarchical nature. For example,  6/8 meter is composed of two strata, one with 2 pulses (dotted quarter notes) at the highest level and another with 3 pulses (eighth notes subdividing the dotted quarter notes) at the next lower level.
+
 Each stratum is identified by a _prime divisor_. These are "basic" meters, usually with 2 and 3 pulses; but additive meters such as 5 (2+3) or 7 (2+2+3), can also be defined as basic meters. The indispensability values of a 2 meter are 1 0, those of a 3 meter are 2 0 1, and those of a 5 (2+3) meter are 4 0 3 1 2.
 
 The following meters have the same number of pulses, but a different stratification yielding the following profiles:<br/>
 `3/4 (3x2x2):   11 0 6 3 9 1 7 4 10 2 8 5`<br/>
 `6/8 (2x3x2):   11 0 6 2 8 4 10 1 7 3 9 5` <br/>
 `12/16 (2x2x3): 11 0 4 8 2 6 10 1 5 9 3 7`<br/>
-`3/4 (3x2x2):   11 0 6 3 9 1 7 4 10 2 8 5`<br/>
 
 <br/>
 {% include img-figure url="/MUTOR/assets/images/unit7_indispensibility2.png" description="Metric profiles for different meters with 12 pulses each" %}
@@ -253,16 +253,16 @@ Note that at all levels, the indispensability of the first pulse is always one l
 The metric profile of a compound meter is obtained by adding the indispensability values of the basic meter of each strata, rotating the first value backwards in each case. In the following examples the dashes are replaced by the repeating the preceding number.
 
 12/16 meter:<br/>
-`Pulse #     2  3  4  5  6  7  8  9  10 11 12 1` <br/>   
-`1st stratum 0  0  0  0  0  0  1  1  1  1  1  1`<br/>
-`2nd stratum 0  0  0  1  1  1  0  0  0  1  1  1`<br/>
-`3rd stratum 0  1  2  0  1  2  0  1  2  0  1  2`<br/>
+`Pulse #     2  3  4  5  6  7  8  9  10 11 12 1`<br/>   
+`1st stratum 0  0  0  0  0  0  1  1  1  1  1  1`<br/>
+`2nd stratum 0  0  0  1  1  1  0  0  0  1  1  1`<br/>
+`3rd stratum 0  1  2  0  1  2  0  1  2  0  1  2`<br/>
 
-`Pulse # 2  3  4  5  6  7  8  9  10 11 12 1` <br/>
-`*1:     0  0  0  0  0  0  1  1  1  1  1  1`<br/>
-`*2:     0  0  0  2  2  2  0  0  0  2  2  2`<br/>
-`*2*2:   0  4  8  0  4  8  0  4  8  0  4  8`<br/>
-`Sum     0  4  8  2  6  10 1  5  9  3  7  11`<br/>
+`Pulse#  2  3  4  5  6  7  8  9  10 11 12 1`<br/>
+`*1:     0  0  0  0  0  0  1  1  1  1  1  1`<br/>
+`*2:     0  0  0  2  2  2  0  0  0  2  2  2`<br/>
+`*2*2:   0  4  8  0  4  8  0  4  8  0  4  8`<br/>
+`Sum     0  4  8  2  6  10 1  5  9  3  7  11`<br/>
 <br/>
 Rotating the first pulse back to the beginning yields:<br/>
 `11  0  4  8  2  6  10 1  5  9  3  7`<br/>
@@ -284,7 +284,7 @@ Now we multiply each stratum by the product of the pulse counts of the preceding
 Rotating the final number back to the beginning yields:<br/>
 `29  0 18 6  12 24  2 20  8 14 26  4 22 10 16 28  1 19  7 13 25  3 21  9 15 27  5 25 11 17` <br/>
 <br/>
-This  process is formalized by the following formula of Clarence Barlow (the rotation is given by the addition of the 1 within the round brackets as well as the square brackets):
+This process is formalized by the following formula of Clarence Barlow (the rotation is given by the addition of the 1 within the round brackets as well as the square brackets):
 
 Formula of the indispensability Ψ of the nth pulse of a meter of stratification p1 x p2 x p3 x...x pz<br/>
 
