--- a/_units/07.md
+++ b/_units/07.md
@@ -253,7 +253,7 @@ Note that at all levels, the indispensability of the first pulse is always one l
 The metric profile of a compound meter is obtained by adding the indispensability values of the basic meter of each strata, rotating the first value backwards in each case. In the following examples the dashes are replaced by the repeating the preceding number.
 
 12/16 meter:<br/>
-`Pulse #     2  3  4  5  6  7  8  9  10 11 12 1`<br/>   
+`Pulse #     2  3  4  5  6  7  8  9  10 11 12 1`<br/>
 `1st stratum 0  0  0  0  0  0  1  1  1  1  1  1`<br/>
 `2nd stratum 0  0  0  1  1  1  0  0  0  1  1  1`<br/>
 `3rd stratum 0  1  2  0  1  2  0  1  2  0  1  2`<br/>
@@ -268,18 +268,18 @@ Rotating the first pulse back to the beginning yields:<br/>
 `11  0  4  8  2  6  10  1  5  9  3  7`<br/>
 
 Similarly, for a 2x3x5 meter (e.g. a 6/4 meter with every quarter note further divided by 5 sixteenth note quintuplet), we initially get:<br/>
-Pulse # <br/>   
+`Pulse #` <br/>   
 `2  3  4  5  6  7  8  9  10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 1` <br/>
-1st stratum <br/>
+`1st stratum` <br/>
 `0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1` <br/>
-2nd stratum <br/>
+`2nd stratum` <br/>
 `0  0  0  0  0  1  1  1  1  1  2  2  2  2  2  0  0  0  0  0  1  1  1  1  1  2  2  2  2  2` <br/>
-3rd stratum <br/>
+`3rd stratum` <br/>
 `0  3  1  2  4  0  3  1  2  4  0  3  1  2  4  0  3  1  2  4  0  3  1  2  4  0  3  1  2  4` <br/>
 <br/>
 Now we multiply each stratum by the product of the pulse counts of the preceding strata (1 for the first stratum) and add the values together:<br/>
 <br/>
-Pulse # <br/>
+`Pulse #` <br/>
 `2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30  1` <br/>
 `*1:`<br/>    
 `0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1` <br/>
@@ -287,7 +287,7 @@ Pulse # <br/>
 `0  0  0  0  0  2  2  2  2  2  4  4  4  4  4  0  0  0  0  0  2  2  2  2  2  4  4  4  4  4` <br/>
 `*2*3:` <br/> 
 `0 18  6 12 24  0 18  6 12 24  0 18  6 12 24  0 18  6 12 24  0 18  6 12 24  0 18  6 12 24` <br/>
-Sum <br/> 
+`Sum` <br/> 
 `0 18  6 12 24  2 20  8 14 26  4 22 10 16 28  1 19  7 13 25  3 21  9 15 27  5 25 11 17 29` <br/>
 <br/>
 Rotating the final number back to the beginning yields:<br/>
