--- a/_units/07.md
+++ b/_units/07.md
@@ -295,9 +295,7 @@ Rotating the final number back to the beginning yields:<br/>
 <br/>
 This process is formalized by the following formula of Clarence Barlow (the rotation is given by the addition of the 1 within the round brackets as well as the square brackets):
 
-Formula of the indispensability Ψ of the nth pulse of a meter of stratification p1 x p2 x p3 x...x pz<br/>
-
-{% include img-figure url="/MUTOR/assets/images/unit7_indispensibility.png" description="Barlow's indispensibility formula" %}
+{% include img-figure url="/MUTOR/assets/images/unit7_indispensibility.png" description="Formula of the indispensability Ψ of the nth pulse of a meter of stratification p1 x p2 x p3 x...x pz" %}
 <br/>
 whereby <br/>
 p0 = pz+1 = 1<br/>
