--- a/_units/07.md
+++ b/_units/07.md
@@ -295,14 +295,14 @@ Rotating the final number back to the beginning yields:<br/>
 <br/>
 This process is formalized by the following formula of Clarence Barlow (the rotation is given by the addition of the 1 within the round brackets as well as the square brackets):
 
-{% include img-figure url="/MUTOR/assets/images/unit7_indispensibility.png" description="Formula of the indispensability Ψ of the nth pulse of a meter of stratification p1 x p2 x p3 x...x pz" %}
+{% include img-figure url="/MUTOR/assets/images/unit7_indispensibility.png" description="Formula of the indispensability Ψ of the nth pulse of a meter of stratification p~1~ x p~2~ x p~3~ x...x p~z~" %}
 <br/>
 whereby <br/>
-p0 = pz+1 = 1<br/>
+p~0~ = p~z+1~ = 1<br/>
 n = position in the bar of the pulse in question, starting at 1<br/>
-pj = stratification divisor on level j<br/>
+p~j~ = stratification divisor on level j<br/>
 z = number of levels in the stratification <br/>
-Ψp(x) = indispensability of the xth pulse of a first-order bar with the prime stratification p<br/>
+Ψ~p~(x) = indispensability of the xth pulse of a first-order bar with the prime stratification p<br/>
 \[x\] = whole-number component of x (floor)<br/>
 
 The indispensability of the 24th pulse (n=24; z=3) can thus be calculated:<br/>
