--- a/_units/07.md
+++ b/_units/07.md
@@ -298,7 +298,7 @@ This process is formalized by the following formula of Clarence Barlow (the rota
 {% include img-figure url="/MUTOR/assets/images/unit7_indispensibility.png" description="Formula of the indispensability Ψ of the nth pulse of a meter of stratification p~1~ x p~2~ x p~3~ x...x p~z~" %}
 <br/>
 whereby <br/>
-p~0~ = p~z+1~ = 1<br/>
+p<sub>0</sub> = p~z+1~ = 1<br/>
 n = position in the bar of the pulse in question, starting at 1<br/>
 p~j~ = stratification divisor on level j<br/>
 z = number of levels in the stratification <br/>
