--- a/_units/07.md
+++ b/_units/07.md
@@ -295,7 +295,7 @@ Rotating the final number back to the beginning yields:<br/>
 <br/>
 This process is formalized by the following formula of Clarence Barlow (the rotation is applied by the addition of the 1 within the round as well as the square brackets):
 
-{% include img-figure url="/MUTOR/assets/images/unit7_indispensibility.png" description="Formula of the indispensability Ψ of the nth pulse of a meter of stratification p<sub>1</sub> x p<sub>2</sub> x p<sub>3</sub> x...x p<sub>z</sub>" %}
+{% include img-figure url="/MUTOR/assets/images/unit7_indispensibility.png" description="Formula of the indispensability Ψ of the nth pulse of a meter of stratification p<sub>1</sub> x p<sub>2</sub> x ... x p<sub>z</sub>" %}
 <br/>
 whereby <br/>
 p<sub>0</sub> = p<sub>z+1</sub> = 1<br/>
