--- a/_units/07.md
+++ b/_units/07.md
@@ -340,6 +340,8 @@ http://www.nature.com/nrn/journal/v6/n10/pdf/nrn1764.pdf
 
 Large & Kohlen. (1994). Connection Science, 6 (1), 177 - 208.
 
+Barlow (2012). On Musiquantics http://clarlow.org/wp-content/uploads/2016/10/On-MusiquanticsA4.pdf 
+
 ## Links and Downloads
 
 AccelerandoExplorer <!-- we used to have a Max patch for this Accelerando Explorer; does either of you still have it? PL -->
@@ -350,6 +352,5 @@ Java applet demo of coupled oscillators: http://www.lon-capa.org/~mmp/applist/co
 
 Peter Desain's Music, Mind, and Machine Group offers several downloadable demos on expressive timing and the Bayesian model of rhythm. http://www.nici.kun.nl/mmm/
 
-Barlow's book On Musiquantics: http://clarlow.org/wp-content/uploads/2016/10/On-MusiquanticsA4.pdf 
  
 {% include unit_postamble.md %}
