--- a/_units/07.md
+++ b/_units/07.md
@@ -312,10 +312,10 @@ For r=1: 2 * Ψ<sub>3</sub>(1 + [1 + (22 mod 30 / 5)] mod 3) = 2 * Ψ<sub>3</sub
 For r=2: 1 * Ψ<sub>2</sub>(1 + [1 + (22 mod 30 / 15)] mod 2) = 1 * Ψ<sub>2</sub>(1 + 2.47 mod 2) = 1 * Ψ<sub>2</sub>(1 + 0) = 1 * 1 = 1 <br/>
 <br/>
 The sum of the three value is therefore 9 (see above).<br/>
-This formula can be extended to also work with additive meters such 2+3+3+2+3, whereby all segments consisting of number 2 ought to be considered _truncated_ 3 meters. The example derives from a 5x3 meter with two of its groups (first and second to last) being truncated, i.e. the missing pulses are removed from the profile and its indispensabilities adjusted accordingly:
+This formula can be extended to also work with additive meters such 2+3+3+2+3, whereby all segments consisting of number 2 ought to be considered _truncated_ 3 meters. This example derives from a 5x3 meter with two of its groups (first and second to last) truncated, i.e. the missing pulses are removed from the profile and its indispensabilities collapsed in order to avoid gaps:
 
 `14 0 [5] 10 3 8 13 1 6 11 2 [7] 12 4 9`<br/>
-remove pulses and renumber indispensability values:<br/>
+remove pulses and collapse indispensability values:<br/>
 `12 0 8 3 6 11 1 5 9 2 10 4 7`
  
 Barlow has often used such profiles in his compositions based on a generative probabilistic approach (i.e. weighted chance operations), his 30-minutes piano piece [Çoǧluotobüsişletmesi](https://youtu.be/-y8bcdSXwY8) among them.
