--- a/_units/07.md
+++ b/_units/07.md
@@ -294,7 +294,7 @@ Now we multiply each stratum by the product of the pulse counts of the preceding
 Rotating the final number back to the beginning yields:<br/>
 `29 0 18 6 12 24 2 20 8 14 26 4 22 10 16 28 1 19 7 13 25 3 21 9 15 27 5 25 11 17` <br/>
 <br/>
-The following formula of Clarence Barlow formalizes this process (the rotation is applied by the addition of the 1 within the round and square brackets):
+The following formula by Clarence Barlow formalizes this process (the rotation is applied by the addition of the 1 within the round and square brackets):
 
 {% include img-figure url="/MUTOR/assets/images/unit7_indispensibility.png" description="Formula of the indispensability Ψ of the nth pulse of a meter of stratification p<sub>1</sub> x p<sub>2</sub> x ... x p<sub>z</sub>" %}
 <br/>
