added new images

--- a/_units/01.md
+++ b/_units/01.md
@@ -148,7 +148,7 @@ while digital signals are *discrete*, i.e. they
 can be thought of as consisting of individual values
 that were recorded by taking samples of an electrical voltage a finite number
 of times, at equally spaced intervals in time. 
-{% include img-figure url="/MUTOR/assets/images/analogvdigital.png" 
+{% include img-figure url="/MUTOR/assets/images/analogvdigital.jpg" 
 description="Digital (discrete) vs. analog (continuous) representations 
 of a signal" %}
 This process comes with advantages and disadvantages, the main disadvantage
