--- a/_units/02.md
+++ b/_units/02.md
@@ -399,11 +399,11 @@ Ranges of hearing loss:
 
 The first part of this sentence is played normally, whereas the second part is filtered so as to simulate the percept of an individual with high-frequency hearing loss.
 
-{% include img-figure url="/MUTOR/assets/images/audiogram.gif" description="Audiogram comparason: Normal Hearing Imparment due to Loud Noise" %}
+{% include img-figure url="/MUTOR/assets/images/audiogram.jpg" description="Audiogram comparason: Normal Hearing Imparment due to Loud Noise" %}
 {% comment %} An audiogram comparing normal hearing with hearing impairment due to loud noise. (image source:http://www.sfu.ca/sonic-studio/handbook/Audiogram.html) {% endcomment %}
 {% comment %} ALSO LOOKS BAD {% endcomment %}
 
-{% include img-figure url="/MUTOR/assets/images/audiogram_presby.gif" description="Audiogram Presbyacusis or Ski-Slope Hearing" %}
+{% include img-figure url="/MUTOR/assets/images/audiogram_presby.jpg" description="Audiogram Presbyacusis or Ski-Slope Hearing" %}
 
 {% include img-figure url="/MUTOR/assets/images/audiogram_familiar.jpg" description="Auditory Familiar Sounds" %}
 {% comment %} Sample audiograms: a) audiogram showing presbyacusis, commonly observed as a "ski-slope" hearing loss (see TypesofHearingLoss). b) Audiograms of other types of hearing loss caused by sudden sounds. Curves are normalized according to the equal-loudness contours (see Fletcher-Munson curves from the previous unit). {% endcomment %}
@@ -426,7 +426,7 @@ Presbyacusis is the loss of hearing as a result of old age. The hearing loss qui
 {% include img-figure url="/MUTOR/assets/images/normalvsdamaged.jpg" description="Comparison Normal Hair Cell vs. Damaged Hair Cell" %}
 {% comment %} (image source: http://www.hei.org/education/health/loss.htm) Normal versus damaged hair cells {% endcomment %}
 
-{% include img-figure url="/MUTOR/assets/images/audiogram_presby.gif" description="Presbyacusis Audiogram" %}
+{% include img-figure url="/MUTOR/assets/images/audiogram_presby.jpg" description="Presbyacusis Audiogram" %}
 Presbyacusis is commonly observed as a "ski-slope" hearing loss, where "ski-slope" refers to the shape of the audiometry function, which is relatively intact at low frequencies, but falls off rapidly at high frequencies.
 {% comment %} (image source: http://www.hearinglife.com.au) {% endcomment %}
 
