--- a/_units/07.md
+++ b/_units/07.md
@@ -106,7 +106,7 @@ Two kinds of time maps we introduce here are the rhythmogram and the maps of per
 
 In addition to the rhythmogram and the score vs performance time map, various other rhythmic representations deserve mention. Desain and Honing describe a triangular space that represents all possible expressive deviations given a four-note rhythm.
 
-{% include img-figure url="/MUTOR/assets/images/unit7_desainhoning.png" description="Desain & Honing" %} 
+{% include img-figure url="/MUTOR/assets/images/unit7_desainhoning.jpg" description="Desain & Honing" %} 
 (image source: Desain & Honing, 2003. Perception.)
 
 Other statistical methods to analyze rhythm and expressive microtiming are also widely used. Benadon uses histograms, which are graphs plotting the occurrence frequencies of events, to diagram the beat-upbeat ratios (BURs) of the swing rhythm in jazz.
