typos in unit 8

--- a/_units/08.md
+++ b/_units/08.md
@@ -234,16 +234,16 @@ Demonstration from ASA CD: Segregation Of A Melody From Interfering Tones This d
 A melody can be generated using a Hidden Markov Model (HMM). An HMM is a chain of sequential probabilities. Each node in a Markov model occurs with a certain probability, and predicts each of the other nodes connected to it with a certain probability. 
 An example of a Hidden Markov Model can be used to predict weather:
 
-{% include img-figure url="/MUTOR/assets/images/unit8_hmm-weather.jpg" description="A Hidden Markov Model used to predict weather (image source: http://www.cs.wisc.edu/~noto/cs540/homework/homework5/homework5.soln.html)" %}
+{% include img-figure url="/MUTOR/assets/images/unit8_hmm-weather.jpg" description="A Hidden Markov Model used to predict weather. (image source: http://www.cs.wisc.edu/~noto/cs540/homework/homework5/homework5.soln.html)" %}
 
 A graph of an HMM is shown above. The model predicts the weather of each day given the previous day. We can see that according to this model, the probability that a day is sunny given that the previous day is also sunny is 0.8, the probability of a foggy day given to the previous foggy day is 0.5, and the probability that a rainy day is followed by another rainy day is 0.6. Each weather state also predicts each other weather state, with lower probabilities. 
 Adapted to music, HMMs can be used to generate melodies. Each interval can be a predictor of the next interval, as specified in gap fill and the IR model. 
 
-{% include img-figure url="/MUTOR/assets/images/unit8_hmm.gif" description="A Hidden Markov Model used to predict weather (image source: http://www.dlib.org/dlib/february02/birmingham/birmingham-appendix2.html)" %}
+{% include img-figure url="/MUTOR/assets/images/unit8_hmm.gif" description="A Hidden Markov Model used to predict a melodic sequence. (image source: http://www.dlib.org/dlib/february02/birmingham/birmingham-appendix2.html)" %}
 
 The following interactive example is a matrix of transitions between intervals in a melody. The melody transitions matrix below generates a melody from a Hidden Markov Model:
 
-{% include img-figure url="/MUTOR/assets/images/unit8_meltrans_patch.png" description="Screenshot of a Max patches implementing a melody transition matrix" %}
+{% include img-figure url="/MUTOR/assets/images/unit8_meltrans_patch.png" description="Screenshot of a Max patch implementing a melody transition matrix" %}
 
 {% include note author="gh" text="This calls for a new solution. Besides, the transition-formatter is missing anyway" %}
 
