added new image of the partch diamond

--- a/_units/09.md
+++ b/_units/09.md
@@ -177,7 +177,7 @@ Amongst the practitioners of microtonality, we can distinguish at least two main
 ## Just Intonation
 Representatives of this movement, which American composer Harry Partch ("Genesis of a Music") had a large impact on, focus on intervals that can be derived from the overtone series and its inversion, the undertone series. Parth refers to this as O-Tonality and U-Tonality. In his music and theoretical writings, hitherto uncommon intervals such as 11/7 or 7/3 came to the foreground.
 
-{% include img-figure url="/MUTOR/assets/images/unit9_Partch-Diamond.png" description="Arrangement of the bars in Harry Partch's Diamond Marimba in 11-limit just intonation" %}
+{% include img-figure url="/MUTOR/assets/images/unit9_Partch-Diamond.jpg" description="Arrangement of the bars in Harry Partch's Diamond Marimba in 11-limit just intonation" %}
 
 In Just Intonation (JI), we consider the relationships between prime numbers and their powers which can be geometrically arranged as lattices. The term n-limit Just Intonation refers to the prime number n up to which harmonic relationships are considered. In the medieval period,  3-limit JI (intervals derived from fifth relationships) was the norm, while during Renaissance 5-limit JI (adding thirds) became main-stream. In the 20th century, Partch added 7 and 11 for 11-limit JI and composers such as Marc Sabat and Wolfgang von Schweinitz have gone up to 23-limit and beyond. They also invented the Extended Helmholtz-Ellis Just Intonation notation capable of capturing JI relationships by means of specific accidentals.
 
