--- a/_units/10.md
+++ b/_units/10.md
@@ -190,7 +190,7 @@ In contrast to the production paradigm, the betting paradigm (Huron, 2006) elimi
 
 The following is a demonstration of the betting paradigm: 
 
-Click here for a [Max demo](https://github.com/MUTOR-2/MUTOR/raw/master/assets/patches/unit10/betting.pat) of the betting paradigm. 
+Click here for a [Max demo](https://github.com/MUTOR-2/MUTOR/raw/master/assets/patches/unit10/betting.maxpat) of the betting paradigm. 
 
 As the above example demonstrates, one advantage of the betting paradigm is that participants' responses can represent not only what they expect, but also how strongly they expect each note. However, a disadvantage of the betting paradigm is that participants must understand the configuration of the response surface in order to perform the task; thus, in the above example where the keyboard is used, pianists would have an advantage over non-keyboard players. 
 
